test/langtools/tools/javac/switchexpr/ExpressionSwitchUnreachable.out
ExpressionSwitchUnreachable.java:14:17: compiler.err.unreachable.stmt
ExpressionSwitchUnreachable.java:21:17: compiler.err.unreachable.stmt
ExpressionSwitchUnreachable.java:29:17: compiler.err.unreachable.stmt
ExpressionSwitchUnreachable.java:36:17: compiler.err.unreachable.stmt
ExpressionSwitchUnreachable.java:44:17: compiler.err.unreachable.stmt
ExpressionSwitchUnreachable.java:51:17: compiler.err.unreachable.stmt
- compiler.note.preview.filename: ExpressionSwitchUnreachable.java
- compiler.note.preview.recompile
6 errors